--- a/theater.html
+++ b/theater.html
@@ -9,98 +9,98 @@
     <h4>THE THREE SISTERS Act 1 Antov Checkov</h4>
     <p>
         The action takes place in a provincial town.
-<br>
-[Ages are stated in brackets.]
+
+<p>[Ages are stated in brackets.]</p>
 
 
-<br>
 
 ACT I
-<br>
-[In PROSOROV'S house. A sitting-room with pillars; behind is seen a
+
+<p>[In PROSOROV'S house. A sitting-room with pillars; behind is seen a
 large dining-room. It is midday, the sun is shining brightly outside. In
-the dining-room the table is being laid for lunch.]
-<br>
-[OLGA, in the regulation blue dress of a teacher at a girl's high
+the dining-room the table is being laid for lunch.]</p>
+
+<p>[OLGA, in the regulation blue dress of a teacher at a girl's high
 school, is walking about correcting exercise books; MASHA, in a black
 dress, with a hat on her knees, sits and reads a book; IRINA, in white,
-stands about, with a thoughtful expression.]
-<br>
-OLGA. It's just a year since father died last May the fifth, on your
+stands about, with a thoughtful expression.]</p>
+
+<h6>OLGA.</h6> 
+<p>It's just a year since father died last May the fifth, on your
 name-day, Irina. It was very cold then, and snowing. I thought I would
 never survive it, and you were in a dead faint. And now a year has
 gone by and we are already thinking about it without pain, and you are
-wearing a white dress and your face is happy. [Clock strikes twelve] And
-the clock struck just the same way then. [Pause] I remember that there
+wearing a white dress and your face is happy.<p>[Clock strikes twelve]</p> And
+the clock struck just the same way then. <p>[Pause]</p> I remember that there
 was music at the funeral, and they fired a volley in the cemetery. He
 was a general in command of a brigade but there were few people present.
-Of course, it was raining then, raining hard, and snowing.
-<br>
-IRINA. Why think about it!
-<br>
-[BARON TUZENBACH, CHEBUTIKIN and SOLENI appear by the table in the
-dining-room, behind the pillars.]
-<br>
-OLGA. It's so warm to-day that we can keep the windows open, though the
+Of course, it was raining then, raining hard, and snowing.</p>
+
+<h6>IRINA.</h6> Why think about it!
+
+<p>[BARON TUZENBACH, CHEBUTIKIN and SOLENI appear by the table in the
+dining-room, behind the pillars.]</p>
+
+<h6>OLGA.</h6><p>It's so warm to-day that we can keep the windows open, though the
 birches are not yet in flower. Father was put in command of a brigade,
 and he rode out of Moscow with us eleven years ago. I remember perfectly
 that it was early in May and that everything in Moscow was flowering
 then. It was warm too, everything was bathed in sunshine. Eleven years
 have gone, and I remember everything as if we rode out only yesterday.
 Oh, God! When I awoke this morning and saw all the light and the spring,
-joy entered my heart, and I longed passionately to go home.
-<br>
-CHEBUTIKIN. Will you take a bet on it?
-<br>
-TUZENBACH. Oh, nonsense.
-<br>
-[MASHA, lost in a reverie over her book, whistles softly.]
-<br>
+joy entered my heart, and I longed passionately to go home.</p>
 
-OLGA. Don't whistle, Masha. How can you! [Pause] I'm always having
+<h6>CHEBUTIKIN.</h6> <p>Will you take a bet on it?</p>
+
+<h6>TUZENBACH.</h6> <p>Oh, nonsense.</p>
+
+<p>[MASHA, lost in a reverie over her book, whistles softly.]</p>
+
+
+<h6>OLGA.</h6> <p>Don't whistle, Masha. How can you! <p>[Pause]</p> I'm always having
 headaches from having to go to the High School every day and then teach
 till evening. Strange thoughts come to me, as if I were already an old
 woman. And really, during these four years that I have been working
 here, I have been feeling as if every day my strength and youth have
 been squeezed out of me, drop by drop. And only one desire grows and
-gains in strength...
-<br>
-IRINA. To go away to Moscow. To sell the house, drop everything here,
-and go to Moscow...
-<br>
-OLGA. Yes! To Moscow, and as soon as possible.
-<br>
-[CHEBUTIKIN and TUZENBACH laugh.]
-<br>
-IRINA. I expect Andrey will become a professor, but still, he won't want
-to live here. Only poor Masha must go on living here.
-<br>
-OLGA. Masha can come to Moscow every year, for the whole summer.
-<br>
-[MASHA is whistling gently.]
-<br>
-IRINA. Everything will be arranged, please God. [Looks out of the
-window] It's nice out to-day. I don't know why I'm so happy: I
+gains in strength...</p>
+
+<h6>IRINA.</h6> <p>To go away to Moscow. To sell the house, drop everything here,
+and go to Moscow...</p>
+
+<h6>OLGA.</h6><p> Yes! To Moscow, and as soon as possible.</p>
+
+<p>[CHEBUTIKIN and TUZENBACH laugh.]</p>
+
+<h6>IRINA.</h6> <p>I expect Andrey will become a professor, but still, he won't want
+to live here. Only poor Masha must go on living here.</p>
+
+<h6>OLGA.</h6><p>Masha can come to Moscow every year, for the whole summer.</p>
+
+<p>[MASHA is whistling gently.]</p>
+
+<h6>IRINA.</h6> <p>Everything will be arranged, please God. <p>[Looks out of the
+window]</p> It's nice out to-day. I don't know why I'm so happy: I
 remembered this morning that it was my name-day, and I suddenly felt
 glad and remembered my childhood, when mother was still with us. What
-beautiful thoughts I had, what thoughts!
-<br>
-OLGA. You're all radiance to-day, I've never seen you look so lovely.
+beautiful thoughts I had, what thoughts!</p>
+
+<h6>OLGA.</h6> <p>You're all radiance to-day, I've never seen you look so lovely.
 And Masha is pretty, too. Andrey wouldn't be bad-looking, if he wasn't
 so stout; it does spoil his appearance. But I've grown old and very
 thin, I suppose it's because I get angry with the girls at school.
 To-day I'm free. I'm at home. I haven't got a headache, and I feel
 younger than I was yesterday. I'm only twenty-eight.... All's well, God
 is everywhere, but it seems to me that if only I were married and could
-stay at home all day, it would be even better. [Pause] I should love my
-husband.
-<br>
-TUZENBACH. [To SOLENI] I'm tired of listening to the rot you talk.
-[Entering the sitting-room] I forgot to say that Vershinin, our new
-lieutenant-colonel of artillery, is coming to see us to-day. [Sits down
-to the piano.]
-<br>
-OLGA. That's good. I'm glad.
+stay at home all day, it would be even better. <p>[Pause]</p> I should love my
+husband.</p>
+
+<h6>TUZENBACH.</h6> <p>[To SOLENI]</p><p>I'm tired of listening to the rot you talk.</p>
+<p>[Entering the sitting-room]</p><p>I forgot to say that Vershinin, our new
+lieutenant-colonel of artillery, is coming to see us to-day.</p><p> [Sits down
+to the piano.]</p>
+
+<h6>OLGA.</h6><p>That's good. I'm glad.</p>
     </p>
 </body>
 </html>
