--- a/theater.html
+++ b/theater.html
@@ -26,7 +26,7 @@ school, is walking about correcting exercise books; MASHA, in a black
 dress, with a hat on her knees, sits and reads a book; IRINA, in white,
 stands about, with a thoughtful expression.]</p>
 
-<h6 class="OLGA name">OLGA.</h6> 
+<h6 class="name OLGA">OLGA.</h6> 
 <p class="speech">It's just a year since father died last May the fifth, on your
 name-day, Irina. It was very cold then, and snowing. I thought I would
 never survive it, and you were in a dead faint. And now a year has
@@ -37,12 +37,12 @@ was music at the funeral, and they fired a volley in the cemetery. He
 was a general in command of a brigade but there were few people present.
 Of course, it was raining then, raining hard, and snowing.</p>
 
-<h6 class="IRINA">IRINA.</h6><p class="speech"> Why think about it!</p>
+<h6 class="name IRINA">IRINA.</h6><p class="speech"> Why think about it!</p>
 
 <p class="direction">[BARON TUZENBACH, CHEBUTIKIN and SOLENI appear by the table in the
 dining-room, behind the pillars.]</p>
 
-<h6 class="OLGA">OLGA.</h6><p class="speech">It's so warm to-day that we can keep the windows open, though the
+<h6 class="name OLGA">OLGA.</h6><p class="speech">It's so warm to-day that we can keep the windows open, though the
 birches are not yet in flower. Father was put in command of a brigade,
 and he rode out of Moscow with us eleven years ago. I remember perfectly
 that it was early in May and that everything in Moscow was flowering
@@ -51,14 +51,14 @@ have gone, and I remember everything as if we rode out only yesterday.
 Oh, God! When I awoke this morning and saw all the light and the spring,
 joy entered my heart, and I longed passionately to go home.</p>
 
-<h6 class="CHEBUTIKIN">CHEBUTIKIN.</h6> <p class="speech">Will you take a bet on it?</p>
+<h6 class="name CHEBUTIKIN">CHEBUTIKIN.</h6> <p class="speech">Will you take a bet on it?</p>
 
-<h6 class="TUZENBACH">TUZENBACH.</h6> <p class="speech">Oh, nonsense.</p>
+<h6 class="name TUZENBACH">TUZENBACH.</h6> <p class="speech">Oh, nonsense.</p>
 
 <p class="direction">[MASHA, lost in a reverie over her book, whistles softly.]</p>
 
 
-<h6 class="OLGA">OLGA.</h6> <p class="speech">Don't whistle, Masha. How can you! <p class="direction">[Pause]</p> I'm always having
+<h6 class="name OLGA">OLGA.</h6> <p class="speech">Don't whistle, Masha. How can you! <p class="direction">[Pause]</p> I'm always having
 headaches from having to go to the High School every day and then teach
 till evening. Strange thoughts come to me, as if I were already an old
 woman. And really, during these four years that I have been working
@@ -66,27 +66,27 @@ here, I have been feeling as if every day my strength and youth have
 been squeezed out of me, drop by drop. And only one desire grows and
 gains in strength...</p>
 
-<h6 class="IRINA">IRINA.</h6> <p class="speech">To go away to Moscow. To sell the house, drop everything here,
+<h6 class="name IRINA">IRINA.</h6> <p class="speech">To go away to Moscow. To sell the house, drop everything here,
 and go to Moscow...</p>
 
-<h6 class="OLGA">OLGA.</h6><p class="speech"> Yes! To Moscow, and as soon as possible.</p>
+<h6 class="name OLGA">OLGA.</h6><p class="speech"> Yes! To Moscow, and as soon as possible.</p>
 
 <p class="direction">[CHEBUTIKIN and TUZENBACH laugh.]</p>
 
-<h6 class="IRINA">IRINA.</h6> <p class="speech">I expect Andrey will become a professor, but still, he won't want
+<h6 class="name IRINA">IRINA.</h6> <p class="speech">I expect Andrey will become a professor, but still, he won't want
 to live here. Only poor Masha must go on living here.</p>
 
-<h6 class="OLGA">OLGA.</h6><p class="speech">Masha can come to Moscow every year, for the whole summer.</p>
+<h6 class="name OLGA">OLGA.</h6><p class="speech">Masha can come to Moscow every year, for the whole summer.</p>
 
 <p class="direction">[MASHA is whistling gently.]</p>
 
-<h6 class="IRINA">IRINA.</h6> <p class="speech">Everything will be arranged, please God. <p class="direction">[Looks out of the
+<h6 class="name IRINA">IRINA.</h6> <p class="speech">Everything will be arranged, please God. <p class="direction">[Looks out of the
 window]</p> It's nice out to-day. I don't know why I'm so happy: I
 remembered this morning that it was my name-day, and I suddenly felt
 glad and remembered my childhood, when mother was still with us. What
 beautiful thoughts I had, what thoughts!</p>
 
-<h6 class="OLGA">OLGA.</h6> <p class="speech">You're all radiance to-day, I've never seen you look so lovely.
+<h6 class="name OLGA">OLGA.</h6> <p class="speech">You're all radiance to-day, I've never seen you look so lovely.
 And Masha is pretty, too. Andrey wouldn't be bad-looking, if he wasn't
 so stout; it does spoil his appearance. But I've grown old and very
 thin, I suppose it's because I get angry with the girls at school.
@@ -96,12 +96,12 @@ is everywhere, but it seems to me that if only I were married and could
 stay at home all day, it would be even better. <p class="direction">[Pause]</p> I should love my
 husband.</p>
 
-<h6 class="TUZENBACH">TUZENBACH.</h6> <p class="direction">[To SOLENI]</p><p class="speech">I'm tired of listening to the rot you talk.</p>
+<h6 class="name TUZENBACH">TUZENBACH.</h6> <p class="direction">[To SOLENI]</p><p class="speech">I'm tired of listening to the rot you talk.</p>
 <p class="direction">[Entering the sitting-room]</p><p>I forgot to say that Vershinin, our new
 lieutenant-colonel of artillery, is coming to see us to-day.</p><p class="direction"> [Sits down
 to the piano.]</p>
 
-<h6 class="OLGA">OLGA.</h6><p class="speech">That's good. I'm glad.</p>
+<h6 class="name OLGA">OLGA.</h6><p class="speech">That's good. I'm glad.</p>
     </p>
 </body>
 </html>
