--- a/theater.html
+++ b/theater.html
@@ -103,5 +103,28 @@ to the piano.]</p>
 
 <h6 class="name OLGA">OLGA.</h6><p class="speech">That's good. I'm glad.</p>
     </p>
+<table>
+    <tr>
+        <th>Character</th>
+        <th>Actor</th>
+        <th>Understudy</th>
+    </tr>
+    <tr>
+        <td>Chebutikin</td>
+        <td>IVAN ROMANOVITCH CHEBUTIKIN</td>
+        <td>army doctor</td>
+    </tr>
+    <tr>
+        <td>kuligin</td>
+        <td>FEODOR ILITCH KULIGIN</td>
+        <td>high school teacher</td>
+    </tr>
+    <tr>
+        <td>Tuzenbach</td>
+        <td>NICOLAI LVOVITCH TUZENBACH</td>
+        <td>lieutenant in the army</td>
+    </tr>
+</table>
+<a href="winter.html">Winter</a>
 </body>
 </html>
