--- a/theater.html
+++ b/theater.html
@@ -4,6 +4,7 @@
 
     <title>Theater page</title>
     <link rel="stylesheet" href="chekov.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <h1>Sushmitha Vadhireddy does Chekov tonight</h1>
@@ -126,7 +127,18 @@ to the piano.]</p>
     </tr>
 </table>
 <a href="winter.html">Winter</a>
-
+<br>
+<img src="image1.jpg"/>
+<nav class="bottom-navbar">
+    <div>
+    <i class="fa fa-film" style='font-size:55px'></i>
+    <a href="theater.html">Theater</a>
+    </div>
+    <div>
+    <i class='fa fa-snowflake-o' style='font-size:55px'></i>
+    <a href="winter.html">Winter</a>
+    </div>
+</nav>
 
 </body>
 </html>
