--- a/winter.html
+++ b/winter.html
@@ -4,6 +4,7 @@
 
     <title>it is cold</title>
     <link rel="stylesheet" href="chekov.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <h6 class = "name IRINA">IRINA.</h6> <p class="speech">Is he old?</p>
@@ -34,6 +35,19 @@ found make a note of! Not that I want it though....</p> <p class="direction">[Cr
 doesn't matter.</p>
 
 <a href="theater.html">Theatre</a>
+
+<br>
+<img src="image2.jpg"/>
+<nav class="bottom-navbar">
+    <div>
+    <i class="fa fa-film" style='font-size:55px'></i>
+    <a href="theater.html">Theater</a>
+    </div>
+    <div>
+    <i class='fa fa-snowflake-o' style='font-size:55px'></i>
+    <a href="winter.html">Winter</a>
+    </div>
+</nav>
 
 </body>
 </html>
